--- a/index.html
+++ b/index.html
@@ -2,14 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" theme-color="purple">
     <title>NTI Matlista</title>
     <script defer src="main.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="title">NTI Matlistor</h1>
+    <div id="sidebar">
+    <h1 class="title">NTI Matlista</h1>
+    <nav></nav>
     <div id="container"></div>
+    </div>
+    <div id="rightside">
+        <img src="maps.png" alt="Picture with directions to subway">
+
+    </div>
 
 </body>
 </html>
