Added all requirements and made them look passable

--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
 </head>
 <body>
     <div id="sidebar">
-    <h1 class="title">NTI Matlista</h1>
-    <nav></nav>
+    <header class="title">NTI Matlista</header>
+    <nav>
+        <a href="#card7">Card7</a>
+        <a href="about.html">About me</a>
+        <a href="https://github.com/Kycklingris/NTI-Matlista">Github</a>
+    </nav>
     <div id="container"></div>
+    <footer>
+        <p>tjenare grabbar, hundra procent copyright på detta (2020)</p>
+    </footer>
     </div>
     <div id="rightside">
         <img src="maps.png" alt="Picture with directions to subway">
